# my_lib

./: .gitignore  CMakeLists.txt  README.md  setup.bash
app/charizard/: CMakeLists.txt
app/charizard/include/charizard/: camera.h  clipper.h  control_bar_widget.h  exector.h  main_window.h  model.h  native_widget.h  render_handle.h  render_widget.h  scenes.h  soft_renderer.h  types.h
app/charizard/src/: camera.cpp  clipper.cpp  control_bar_widget.cpp  exector.cpp  main.cpp  main_window.cpp  model.cpp  native_widget.cpp  render_handle.cpp  render_widget.cpp  scenes.cpp  soft_renderer.cpp  types.cpp
app/panda/: CMakeLists.txt
app/panda/config/: .panda_config
app/panda/config/panda/codegen/cpp/: config.json
app/panda/config/panda/codegen/cpp/script/: gen_header.bash
app/panda/config/panda/codegen/cpp/template/: foo.h  foo.hpp
app/panda/include/panda/: code_gen_cmd.h  cpp_code_gen_handle.h  panda_cmd.h  plan_cmd.h  plan_handle.h  util.h
app/panda/src/: cpp_code_gen_handle.cpp  main.cpp  plan_handle.cpp  util.cpp
app/panda/src/cmd/: code_gen_cmd.cpp  panda_cmd.cpp  plan_cmd.cpp
app/pikachu/: CMakeLists.txt
app/pikachu/config/: config.json
app/pikachu/include/pikachu/: about_dialog.h  config.h  control_bar.h  conversion_handle.h  main_window.h  picture_widget.h  pikachu_app.h  preloading_widget.h
app/pikachu/src/: about_dialog.cpp  config.cpp  control_bar.cpp  conversion_handle.cpp  main.cpp  main_window.cpp  picture_widget.cpp  pikachu_app.cpp  preloading_widget.cpp
common_lib/: CMakeLists.txt
common_lib/r_math/: CMakeLists.txt
common_lib/r_math/include/r_math/: cube.h  mat4.h  plane3.h  rect.h  segment3.h  vec2.h  vec3.h  vec4.h
common_lib/r_math/src/: mat4.cpp  segment3.cpp  vec4.cpp
common_lib/r_math/test/: r_math_test.cpp
funny/: CMakeLists.txt
funny/estimate_pi/: CMakeLists.txt
funny/estimate_pi/python/: estimate_pi.py
funny/estimate_pi/src/: main.cpp
funny/snorlax/: CMakeLists.txt  README.txt
funny/snorlax/include/snorlax/: frame.h  math.h  model.h  renderer.h
funny/snorlax/src/: frame.cpp  main.cpp  math.cpp  model.cpp  renderer.cpp
lib/r_audio/: CMakeLists.txt
lib/r_audio/include/r_audio/: wav.h  wav_player.h
lib/r_audio/src/: wav.cpp  wav_player.cpp
lib/r_audio/tool/: r_audio_test.cpp
log/: CMakeLists.txt
log/src/: main.cpp  rlog.cpp  rlog.h
r_argument_processor/: CMakeLists.txt
r_argument_processor/include/command_processor/: command_processor.h
r_argument_processor/src/: command_processor.cpp  main.cpp
r_common/: CMakeLists.txt
r_common/include/: byte_buffer.h  dir.h  file.h
r_common/src/: byte_buffer.cpp  dir.cpp  file.cpp  r_time.cpp  r_time.h  r_time_test.cpp
r_common/test/dir_test/: main.cpp
r_common/test/file_test/: main.cpp
r_log/: CMakeLists.txt
r_log/src/: main.cpp  rlog.h
r_render_system/: CMakeLists.txt
r_render_system/include/render_system/: camera.h
r_render_system/scripts/: generate_spirv.py
r_render_system/src/: main.cpp  r_renderer.h  r_window.h  window_info.h
r_render_system/src/resources/: texture.h
r_render_system/src/shader/: init_shader.frag  init_shader.frag.h  init_shader.vert  init_shader.vert.h  triangle.frag  triangle.vert
r_render_system/src/vulkan_renderer/: command_buffer_initializer.cpp  command_buffer_initializer.h  command_pool_initializer.cpp  command_pool_initializer.h  depth_buffer_initializer.cpp  depth_buffer_initializer.h  descriptor_and_pipeline_initializer.cpp  descriptor_and_pipeline_initializer.h  descriptor_pool_initializer.cpp  descriptor_pool_initializer.h  descriptor_set_initializer.cpp  descriptor_set_initializer.h  descriptor_set_layout_initializer.cpp  descriptor_set_layout_initializer.h  device_initializer.cpp  device_initializer.h  framebuffer_initializer.cpp  framebuffer_initializer.h  instance_initializer.cpp  instance_initializer.h  physical_device_initializer.cpp  physical_device_initializer.h  pipeline_initializer.cpp  pipeline_initializer.h  r_renderer.cpp  renderpass_initializer.cpp  renderpass_initializer.h  shader_initializer.cpp  shader_initializer.h  surface_initializer.cpp  surface_initializer.h  swapchain_initializer.cpp  swapchain_initializer.h  texture_initializer.cpp  texture_initializer.h  uniform_buffer_initializer.cpp  uniform_buffer_initializer.h  vertex_buffer_initializer.cpp  vertex_buffer_initializer.h  vulkan_context.cpp  (+3 more)
r_render_system/src/xlib_window/: r_window.cpp
study/alsa/: CMakeLists.txt
study/alsa/src/: main.cpp
study/fbx/: CMakeLists.txt
study/fbx/src/: main.cpp
study/ipc/linux/: CMakeLists.txt
study/ipc/linux/src/: main.cpp
study/opencv/: CMakeLists.txt
study/opencv/src/: display_image.cpp
